--- a/register/index.html
+++ b/register/index.html
@@ -75,7 +75,7 @@
 
 
             <button id="open-menu" class="md:hidden">
-                <img class="w-[25px]" src="../assets/menu.svg" alt="Open Menu" class="inline" />
+                <img src="../assets/menu.svg" alt="Open Menu" class="inline w-[25px]" />
             </button>
         </div>
     </div>
@@ -92,7 +92,7 @@
             width="90px"
     /></a>
     <a href="..">HOME</a>
-    <a href="#../programs">PROGRAMS</a>
+    <a href="../programs">PROGRAMS</a>
     <a href="../#about">ABOUT US</a>
     <a href="../contact">CONTACT</a>
     <a href="#">REGISTER NOW</a>
