--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
             <button id="open-menu" class="md:hidden">
-                <img class="w-[25px]" src="./assets/menu.svg" alt="Open Menu" class="inline" />
+                <img src="./assets/menu.svg" alt="Open Menu" class="inline w-[25px]" />
             </button>
         </div>
     </div>
@@ -107,10 +107,10 @@
                     Data Analysis and Reporting
 
                 </h1>
-                <p class="mt-3 text-white/70 text-xl">
+                <p class="mt-3 text-white/70 text-lg md:text-xl">
                     20 Weeks Program.  100 % Virtual  Class. Career Coach and Mentorship
                 </p>
-                <p class="mt-3 text-white/70 text-xl">
+                <p class="mt-3 text-white/70 text-lg md:text-xl">
                     You will master the technical aspects of data gathering and data governance.
                     You will also learn to use and manage multiple databases, then apply these skills to develop corporate reports using specific reporting tools.
                 </p>
@@ -152,7 +152,7 @@
             </h2>
             <div class="accordion-collapse">
                 <div class="accordion-body py-4">
-                    Two times a week (Saturday & Sunday)
+                    Three times a week (Friday, Saturday & Sunday)
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
     </section>
     <section class="about" id="about">
         <h1 class="text-center font-bold text-3xl mb-6">ABOUT US</h1>
-        <p class="text-lg text-black/75 w-3/4 m-auto text-center my-10">
+        <p class="text-lg text-black/75 w-full md:w-3/4 m-auto text-center my-10">
             ScaleUp Tech Academy is an online interactive training program in data. We are currently based out of Calgary, Canada.
             We offer a virtual training program in Business Intelligence, Data analysis and Reporting.
         </p>
@@ -262,10 +262,10 @@
         <div class="flex flex-col md:flex-row items-center gap-4">
             <img class="rounded-full" src="./assets/people-learning.jpeg" alt="people learning">
             <div class="p-2 md:p-8">
-                <h3 class="text-5xl">Need a new career? </h3>
-                <p class="text-xl my-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolorem ducimus et, exercitationem facilis fuga impedit ipsa iure labore magnam nisi odio quisquam reiciendis rem tempore vel voluptate! Amet, magni.</p>
+                <h3 class="text-3xl md:text-5xl">Need a new career? </h3>
+                <p class="text-lg my-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolorem ducimus et, exercitationem facilis fuga impedit ipsa iure labore magnam nisi odio quisquam reiciendis rem tempore vel voluptate! Amet, magni.</p>
                 <a href="./register">
-                    <button class="bg-primary px-6 py-4 text-white text-xl flex items-center gap-4"><span>REGISTER NOW</span> <img src="assets/right-arrow.svg"></button>
+                    <button class="bg-primary px-6 py-4 text-white text-xl flex items-center gap-4"><span>REGISTER NOW</span> <img src="assets/right-arrow.svg" alt="Right arrow"></button>
                 </a>
 
             </div>
