--- a/programs/index.html
+++ b/programs/index.html
@@ -75,7 +75,7 @@
 
 
             <button id="open-menu" class="md:hidden">
-                <img class="w-[25px]" src="../assets/menu.svg" alt="Open Menu" class="inline" />
+                <img src="../assets/menu.svg" alt="Open Menu" class="inline w-[25px]" />
             </button>
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="container mx-auto px-5 pt-6">
             <h1 class="text-white text-4xl md:text-6xl font-bold">Our Programs</h1>
             <p class="mt-3 text-white/70 text-lg">
-                Browse through a list of the programs we offer and choose one to get you tech career started with.
+                Browse through a list of the programs we offer and choose one to get your tech career started with.
             </p>
         </div>
     </div>
@@ -119,7 +119,7 @@
                 <img class="h-8 w-8" src="../assets/data-course.svg" alt="Data">
             </div>
             <h3 class="font-bold text-[#333] my-8 text-xl">Business Intelligence, Data Analysis and Reporting</h3>
-            <p>The Business Intelligence, Data Analysis and Reporting   program will use the Microsoft SQL Server and Business intelligence  toolset to give you the skills you need to develop, administer...</p>
+            <p>The Business Intelligence, Data Analysis and Reporting   program will use the Microsoft SQL Server and Business intelligence  toolset to give you the skills you need to develop, a...</p>
             <a href="./business-intelligence-data-analysis-reporting/">
                 <button class="bg-primary px-4 py-2 text-white mt-3 rounded-md">LEARN MORE</button>
             </a>
