--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <img class="rounded-full" src="./assets/people-learning.jpeg" alt="people learning">
             <div class="p-2 md:p-8">
                 <h3 class="text-3xl md:text-5xl">Need a new career? </h3>
-                <p class="text-lg my-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolorem ducimus et, exercitationem facilis fuga impedit ipsa iure labore magnam nisi odio quisquam reiciendis rem tempore vel voluptate! Amet, magni.</p>
+                <p class="text-lg my-6">No Prior IT industry experience needed. The academy is great for absolute beginners and technology professionals who want to expand their knowledge of tech.</p>
                 <a href="./register">
                     <button class="bg-primary px-6 py-4 text-white text-xl flex items-center gap-4"><span>REGISTER NOW</span> <img src="assets/right-arrow.svg" alt="Right arrow"></button>
                 </a>
