--- a/programs/business-intelligence-data-analysis-reporting/index.html
+++ b/programs/business-intelligence-data-analysis-reporting/index.html
@@ -68,7 +68,7 @@
         </a>
         <div class="nav-links">
             <a href="../.." class="nav-link">HOME</a>
-            <a href="#" class="nav-link active">PROGRAMS</a>
+            <a href="../" class="nav-link active">PROGRAMS</a>
             <a href="../../#about" class="nav-link">ABOUT US</a>
             <a href="../../contact" class="nav-link">CONTACT</a>
             <a href="../../register" class="nav-link bg-primary text-white p-3">REGISTER NOW</a>
@@ -92,7 +92,7 @@
             width="90px"
     /></a>
     <a href="../..">HOME</a>
-    <a href="#">PROGRAMS</a>
+    <a href="../">PROGRAMS</a>
     <a href="../../#about">ABOUT US</a>
     <a href="../../contact">CONTACT</a>
     <a href="../../register">REGISTER NOW</a>
