minor content changes

--- a/programs/business-intelligence-data-analysis-reporting/index.html
+++ b/programs/business-intelligence-data-analysis-reporting/index.html
@@ -53,8 +53,8 @@
         </a>
     </div>
     <div class="text-white font-semibold">
-        <a class="underline ml-4" href="mailto:help@scaleup.com">help@scaleup.com</a>
-        <a class="underline ml-4" href="tel:+2347096917721">+234 709 691 7721</a>
+        <a class="underline ml-4" href="mailto:scaleupacademy2023@gmail.com">scaleupacademy2023@gmail.com</a>
+        <a class="underline ml-4" href="tel:+17096918522">+1 709 691 8522</a>
     </div>
 </div>
 <nav class="nav">
@@ -166,7 +166,7 @@
 
         <p class="md:text-xl flex-1 p-4 md:skew-x-6">
             This program is offered through a virtual platform. Class
-            sessions are held three times a week <strong>(Friday, Saturday & Sunday)</strong>, with each session lasting a duration of two (<strong>2</strong>) hours. Regular attendance is required, and students are expected to be present in the learning environment by the scheduled start time of the class. Additional course requirements and grading standards are communicated by the course instructor. This course is meant to be taught in a way that encourages students to be active learners and source of knowledge for other classmates. These are two skills that are absolutely essential to succeed as a tech professional.
+            sessions are held three times a week <strong>(Friday, Saturday & Sunday) 7pm - 9pm West Africa Time.</strong>, with each session lasting a duration of two (<strong>2</strong>) hours. Regular attendance is required, and students are expected to be present in the learning environment by the scheduled start time of the class. Additional course requirements and grading standards are communicated by the course instructor. This course is meant to be taught in a way that encourages students to be active learners and source of knowledge for other classmates. These are two skills that are absolutely essential to succeed as a tech professional.
         </p>
     </div>
 
@@ -212,17 +212,17 @@
             <h3>GET IN TOUCH</h3>
             <span
             ><span class="it-title">Phone : </span
-            ><a class="underline" href="tel:+2347096917721">
-              +234 709 691 7721</a
+            ><a class="underline" href="tel:+17096918522">
+              +1 709 691 8522</a
             >
           </span>
             <span
             ><span class="it-title">Email : </span>
-            <a class="underline" href="mailto:info@scaleup.com">
-              info@scaleup.com</a
+            <a class="underline" href="mailto:scaleupacademy2023@gmail.com">
+              scaleupacademy2023@gmail.com</a
             ></span
             >
-            <span><span class="it-title">Hours :</span> 9am - 9pm</span>
+            <span><span class="it-title">Contact Hours :</span> 9am - 9pm</span>
         </div>
         <div>
             <h3>LINKS</h3>
