--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </a>
         </div>
         <div class="text-white font-semibold">
-            <a class="underline ml-4" href="mailto:help@scaleup.com">help@scaleup.com</a>
-            <a class="underline ml-4" href="tel:+2347096917721">+234 709 691 7721</a>
+            <a class="underline ml-4" href="mailto:scaleupacademy2023@gmail.com">scaleupacademy2023@gmail.com</a>
+            <a class="underline ml-4" href="tel:+17096918522">+1 709 691 8522</a>
         </div>
     </div>
     <nav class="nav">
@@ -152,7 +152,7 @@
             </h2>
             <div class="accordion-collapse">
                 <div class="accordion-body py-4">
-                    Three times a week (Friday, Saturday & Sunday)
+                    Three times a week (Friday, Saturday & Sunday) 7pm - 9pm West Africa Time
                 </div>
             </div>
         </div>
@@ -284,17 +284,17 @@
                 <h3>GET IN TOUCH</h3>
                 <span
                 ><span class="it-title">Phone : </span
-                ><a class="underline" href="tel:+2347096917721">
-              +234 709 691 7721</a
+                ><a class="underline" href="tel:+17096918522">
+              +1 709 691 8522</a
                 >
           </span>
                 <span
                 ><span class="it-title">Email : </span>
-            <a class="underline" href="mailto:info@scaleup.com">
-              info@scaleup.com</a
+            <a class="underline" href="mailto:scaleupacademy2023@gmail.com">
+              scaleupacademy2023@gmail.com</a
             ></span
                 >
-                <span><span class="it-title">Hours :</span> 9am - 9pm</span>
+                <span><span class="it-title">Contact Hours :</span> 9am - 9pm</span>
             </div>
             <div>
                 <h3>LINKS</h3>
