seo data and site icon

--- a/programs/business-intelligence-data-analysis-reporting/index.html
+++ b/programs/business-intelligence-data-analysis-reporting/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:site_name" content="Business Intelligence, Data Analysis and Reporting | ScaleUp Academy" />
+    <meta property="og:title" content="Business Intelligence, Data Analysis and Reporting | ScaleUp Academy" />
+    <link
+            rel="shortcut icon"
+            href="../../assets/scaleup-full.jpeg"
+            type="image/x-icon"
+    />
+    <meta
+            property="og:description"
+            content="The Business Intelligence, Data Analysis and Reporting   program will use the Microsoft SQL Server and Business intelligence  toolset to give you the skills you need to develop, administer and analyze corporate data.
+        You will learn industry-standard data management best practices and techniques."
+    />
+    <meta
+            name="description"
+            content="The Business Intelligence, Data Analysis and Reporting   program will use the Microsoft SQL Server and Business intelligence  toolset to give you the skills you need to develop, administer and analyze corporate data.
+        You will learn industry-standard data management best practices and techniques."
+    />
+    <meta
+            property="og:image"
+            content="https://scaleuptechacademy.com/assets/scaleup-full.jpeg"
+    />
+    <meta property="og:url" content="https://scaleuptechacademy.com/" />
+    <meta
+            name="keywords"
+            content="ScaleUp tech academy, tech, academy, business intelligence, training, school, data analytics, web development, ui/ux design,ScaleUp, scale up, reporting"
+    />
     <link rel="stylesheet" href="../../output.css">
-    <title>Business Intelligence, Data Analysis and Reporting | Scale Up</title>
+    <title>Business Intelligence, Data Analysis and Reporting | ScaleUp Academy</title>
 </head>
 <body>
 <div class="bg-primary p-5 flex justify-between">
