--- a/register/index.html
+++ b/register/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:site_name" content="Start Learning | ScaleUp Tech Academy" />
+    <meta property="og:title" content="Start Learning | ScaleUp Tech Academy" />
+    <link
+            rel="shortcut icon"
+            href="../assets/scaleup-full.jpeg"
+            type="image/x-icon"
+    />
+    <meta
+            property="og:description"
+            content="Sign up for a program. ScaleUp Tech Academy is an online interactive training program in data. We are currently based out of Calgary, Canada.
+            We offer a virtual training program in Business Intelligence, Data analysis and Reporting."
+    />
+    <meta
+            name="description"
+            content="Sign up for a program. ScaleUp Tech Academy is an online interactive training program in data. We are currently based out of Calgary, Canada.
+            We offer a virtual training program in Business Intelligence, Data analysis and Reporting."
+    />
+    <meta
+            property="og:image"
+            content="https://scaleuptechacademy.com/assets/scaleup-full.jpeg"
+    />
+    <meta property="og:url" content="https://scaleuptechacademy.com/" />
+    <meta
+            name="keywords"
+            content="ScaleUp tech academy, tech, academy, business intelligence, training, school, data analytics, web development, ui/ux design,ScaleUp, scale up, reporting"
+    />
     <link rel="stylesheet" href="../output.css">
-    <title>Scale Up | Start Learning</title>
+    <title>Start Learning | ScaleUp Academy</title>
 </head>
 <body>
 <div class="bg-primary p-5 flex justify-between">
