added more courses and linked forms to backend

--- a/programs/index.html
+++ b/programs/index.html
@@ -139,16 +139,37 @@
 <section
         class="container mx-auto py-10 px-4"
 >
-    <div>
-        <div class="w-11/12 m-auto md:m-0 md:w-[400px] shadow-lg p-8 rounded-md hover:scale-105">
-            <div class="rounded-full shadow-lg w-fit p-4">
-                <img class="h-8 w-8" src="../assets/data-course.svg" alt="Data">
+    <div class="flex flex-col md:flex-row items-center justify-center gap-4 md:gap-12 flex-wrap">
+        <div class="program">
+            <div>
+                <img src="../assets/data-course.svg" alt="Data">
             </div>
-            <h3 class="font-bold text-[#333] my-8 text-xl">Business Intelligence, Data Analysis and Reporting</h3>
-            <p>The Business Intelligence, Data Analysis and Reporting   program will use the Microsoft SQL Server and Business intelligence  toolset to give you the skills you need to develop, a...</p>
+            <h3>Business Intelligence, Data Analysis and Reporting</h3>
+            <p>The Business Intelligence, Data Analysis and Reporting   program will use the Microsoft SQL Server and Business intelligence  toolset to give you the skills you need to develop, administer and analyze corporate dat...</p>
             <a href="./business-intelligence-data-analysis-reporting/">
-                <button class="bg-primary px-4 py-2 text-white mt-3 rounded-md">LEARN MORE</button>
+                <button>LEARN MORE</button>
             </a>
+
+        </div>
+
+        <div class="program">
+            <div>
+                <img src="../assets/web-course.svg" alt="Web Development">
+            </div>
+            <h3>Website Development</h3>
+            <p>Unlock the world of limitless possibilities with our Web Development course, where you'll learn the art of crafting dynamic websites and robust web applications using cutting-edge technologies and industry best practice...</p>
+            <button disabled class="inactive">COMING SOON</button>
+
+        </div>
+
+        <div class="program">
+            <div>
+                <img src="../assets/ui-course.png" alt="UI/UX Design">
+            </div>
+            <h3>UI/UX Design</h3>
+            <p>Dive into the captivating realm of User Interface and User Experience design through our immersive course, where you'll master the art of creating stunning visuals and intuitive user experiences that leave a lasting impressio...</p>
+
+            <button disabled class="inactive">COMING SOON</button>
 
         </div>
     </div>
