--- a/contact/index.html
+++ b/contact/index.html
@@ -180,19 +180,19 @@
     <form class="w-full p-3">
         <div class="form-group">
             <label for="f-name">First Name <sup>*</sup></label>
-            <input type="text" id="f-name" placeholder="Enter first name" required />
+            <input type="text" id="f-name" name="firstName" placeholder="Enter first name" required />
         </div>
         <div class="form-group">
             <label for="l-name">Last Name <sup>*</sup></label>
-            <input type="text" id="l-name" placeholder="Enter last name" required />
+            <input type="text" id="l-name" name="lastName" placeholder="Enter last name" required />
         </div>
         <div class="form-group">
             <label for="email">Email <sup>*</sup></label>
-            <input type="email" id="email" placeholder="Enter email" required />
+            <input type="email" id="email" name="email" placeholder="Enter email" required />
         </div>
         <div class="form-group">
             <label for="message">Message <sup>*</sup></label>
-            <textarea required id="message" rows="10"></textarea>
+            <textarea required name="message" id="message" rows="10"></textarea>
         </div>
         <p
                 class="text-red-500 font-bold text-center mb-4 max-w-sm"
@@ -284,4 +284,5 @@
 </footer>
 </body>
 <script src="../nav.js"></script>
+<script src="./contact.js"></script>
 </html>
