--- a/register/index.html
+++ b/register/index.html
@@ -142,26 +142,26 @@
 <section
         class="container mx-auto py-10 px-4"
 >
-    <form class="w-full p-3">
+    <form class="w-full p-3" id="register-form">
         <div class="form-group">
             <label for="f-name">First Name <sup>*</sup></label>
-            <input type="text" id="f-name" placeholder="Enter first name" required />
+            <input type="text" id="f-name" placeholder="Enter first name" name="firstName" required />
         </div>
         <div class="form-group">
             <label for="l-name">Last Name <sup>*</sup></label>
-            <input type="text" id="l-name" placeholder="Enter last name" required />
+            <input type="text" id="l-name" placeholder="Enter last name" name="lastName" required />
         </div>
         <div class="form-group">
             <label for="email">Email <sup>*</sup></label>
-            <input type="email" id="email" placeholder="Enter email" required />
+            <input type="email" id="email" placeholder="Enter email" name="email" required />
         </div>
         <div class="form-group">
             <label for="phone">Phone <sup>*</sup></label>
-            <input type="tel" id="phone" required placeholder="Enter phone number" />
+            <input type="tel" id="phone" name="phone" required placeholder="Enter phone number" />
         </div>
         <div class="form-group">
             <label for="country">Country <sup>*</sup></label>
-            <select id="country" required>
+            <select id="country" name="country" required>
                 <option value="" disabled selected>Select your country..</option>
                 <option value="Afghanistan">Afghanistan</option>
                 <option value="Albania">Albania</option>
@@ -406,19 +406,19 @@
         </div>
         <div class="form-group">
             <label for="edu">Education/Field of Study</label>
-            <input type="tel" id="edu" placeholder="Educational qualifications and field" />
+            <input type="text" id="edu" name="education" placeholder="Educational qualifications and field" />
         </div>
         <div class="form-group">
             <label for="job-title">Current Job Title</label>
-            <input type="text" id="job-title" placeholder="Current job title" />
+            <input type="text" id="job-title" name="jobTitle" placeholder="Current job title" />
         </div>
         <div class="form-group">
             <label for="job-fn">Current Job Function </label>
-            <input type="text" id="job-fn" placeholder="Current job function" />
+            <input type="text" id="job-fn" name="jobFunction" placeholder="Current job function" />
         </div>
         <div class="form-group">
             <label for="program">Program <sup>*</sup></label>
-            <select id="program" required>
+            <select id="program" name="selectedProgram" required>
                 <option value="" disabled selected>Please choose a program</option>
                 <option value="Business Intelligence, Data Analysis and Reporting">Business Intelligence, Data Analysis and Reporting</option>
             </select>
@@ -426,7 +426,7 @@
 
         <div class="form-group">
             <label for="ref">How did you hear about ScaleUp Tech Academy? <sup>*</sup></label>
-            <select id="ref" required>
+            <select id="ref" name="referrer" required>
                 <option value="" disabled selected>Please choose an option</option>
                 <option value="Facebook">Facebook</option>
                 <option value="Google">Google</option>
@@ -440,7 +440,7 @@
         </div>
         <p
                 class="text-red-500 font-bold text-center mb-4 max-w-sm"
-                id="contact-error"
+                id="apply-error"
         ></p>
         <div class="form-group">
             <button type="submit" class="btn-submit">
@@ -450,7 +450,7 @@
         </div>
         <p
                 class="text-green-800 font-bold text-center mt-2 max-w-sm"
-                id="contact-success"
+                id="apply-success"
         ></p>
     </form>
 </section>
@@ -528,4 +528,5 @@
 </footer>
 </body>
 <script src="../nav.js"></script>
+<script src="./register.js"></script>
 </html>
