testimonial and nav button fix

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="./programs" class="nav-link">PROGRAMS</a>
             <a href="#about" class="nav-link">ABOUT US</a>
             <a href="./contact" class="nav-link">CONTACT</a>
-            <a href="./register" class="nav-link bg-primary text-white p-3">REGISTER NOW</a>
+            <a href="./register" class="nav-link-btn bg-primary text-white p-3">REGISTER NOW</a>
 
 
             <button id="open-menu" class="md:hidden">
@@ -140,11 +140,14 @@
                     You will master the technical aspects of data gathering and data governance.
                     You will also learn to use and manage multiple databases, then apply these skills to develop corporate reports using specific reporting tools.
                 </p>
-                <a href="./register">
+                <p class="mt-3 text-white/70 text-lg md:text-xl">
+                    Join hundreds of thousands of Global Tech workers who are working remotely from their locations and earning in foreign currencies, or get visa sponsorship jobs to work in America, Canada, Europe and any other worldwide locations
+                </p>
+                <a href="./programs">
                     <button
                             class="mt-8 bg-primary hover:bg-transparent border-2 border-primary text-white rounded-full px-6 py-3 text-lg"
                     >
-                        Register Now
+                        Get Started Now
                     </button>
                 </a>
             </div>
@@ -297,6 +300,36 @@
             </div>
         </div>
     </section>
+    <div class="bg-gray-100 py-8">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl font-extrabold text-gray-900 text-center">WHAT PEOPLE ARE SAYING</h2>
+            <div class="mt-10 grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
+                <div class="bg-white rounded-lg shadow-md p-6 flex flex-col justify-between">
+                    <p class="text-lg text-gray-800">The BI and Data Analysis program was a game-changer for me in securing a remote tech job. The programs comprehensive curriculum provided in-depth training on data analysis and reporting tools, making me proficient in industry-standard skills. Additionally, the programs career services team worked tirelessly to connect me with companies that offered remote positions.
+                        I highly recommend this program as your pathway to success.</p>
+                    <p class="mt-4 text-gray-600">Agyei Kwadwo</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 flex flex-col justify-between">
+                    <p class="text-lg text-gray-800">Before taking the Business Intelligence, Data Analysis and Reporting program, I felt overwhelmed by the vast amount of data within my organization.
+                        However, this program completely transformed my perspective and equipped me with the skills to not only analyze data effectively but also generate valuable insights</p>
+                    <p class="mt-4 text-gray-600">Amy Mothembe</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 flex flex-col justify-between">
+                    <p class="text-lg text-gray-800">This program exceeded all my expectations. As someone with a limited technical background, I was initially hesitant to enroll. However, the instructors broke down complex concepts into easily understandable modules and provided hands-on guidance throughout the program.
+                        This program truly empowered me to become a valuable asset in my organization's data-driven initiatives.
+                    </p>
+                    <p class="mt-4 text-gray-600">James Author</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 flex flex-col justify-between">
+                    <p class="text-lg text-gray-800">The Business Intelligence  program opened doors to tech job opportunities with visa sponsorship that I never thought possible.
+                        The programs curriculum not only covered the technical aspects of BI and data analysis, but also prepared me for the new work environment.
+                        The instructors shared insights into collaboration tools and strategies, making me a desirable candidate for the positions.
+                    </p>
+                    <p class="mt-4 text-gray-600">Nduka Azubuike</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="footer-cont">
             <div>
