--- a/programs/business-intelligence-data-analysis-reporting/index.html
+++ b/programs/business-intelligence-data-analysis-reporting/index.html
@@ -97,7 +97,7 @@
             <a href="../" class="nav-link active">PROGRAMS</a>
             <a href="../../#about" class="nav-link">ABOUT US</a>
             <a href="../../contact" class="nav-link">CONTACT</a>
-            <a href="../../register" class="nav-link bg-primary text-white p-3">REGISTER NOW</a>
+            <a href="../../register" class="nav-link-btn bg-primary text-white p-3">REGISTER NOW</a>
 
 
             <button id="open-menu" class="md:hidden">
