--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="accordion-item border-t border-gray-200">
             <h2 class="accordion-header">
                 <button class="accordion-button" type="button">
-                    <span>Are the classes Virtual or in Person?</span>
+                    <span>What will be the mode of learning/teaching?</span>
                     <svg class="h-5 w-5 transform transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                     </svg>
@@ -211,7 +211,7 @@
             </h2>
             <div class="accordion-collapse">
                 <div class="accordion-body py-4">
-                    All classes would be virtually on Zoom.
+                    All classes will be virtual via Zoom.
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
         <div class="accordion-item border-t border-gray-200">
             <h2 class="accordion-header">
                 <button class="accordion-button" type="button">
-                    <span>Would I require text books for this program?</span>
+                    <span>What learning resources and support will be provided during the program?</span>
                     <svg class="h-5 w-5 transform transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                     </svg>
@@ -241,14 +241,14 @@
             </h2>
             <div class="accordion-collapse">
                 <div class="accordion-body py-4">
-                    No. ScaleUp Academy will grant you access to learning materials , which contains a wealth of resources to assist you in Learning.
+                    During the program, you will have access to comprehensive learning resources, including video lectures, tutorials, hands-on exercises, and case studies.
                 </div>
             </div>
         </div>
         <div class="accordion-item border-t border-gray-200">
             <h2 class="accordion-header">
                 <button class="accordion-button" type="button">
-                    <span>Is a laptop Required for learning?</span>
+                    <span>What are the tools required for learning?</span>
                     <svg class="h-5 w-5 transform transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
                     </svg>
@@ -256,7 +256,22 @@
             </h2>
             <div class="accordion-collapse">
                 <div class="accordion-body py-4">
-                    Yes a laptop is required. Monitor is optional.
+                    A laptop or desktop is required. Monitor and other peripherals are optional.
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item border-t border-gray-200">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button">
+                    <span>Is any prior experience or background knwoledge necessary to enroll in the program?</span>
+                    <svg class="h-5 w-5 transform transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                    </svg>
+                </button>
+            </h2>
+            <div class="accordion-collapse">
+                <div class="accordion-body py-4">
+                    Our training program is designed to cater to learners with various level of experience. While prior experience in Business Intelligence or data Analysis can be helpful, it is not a prerequisite. Our program is from zero to hero.
                 </div>
             </div>
         </div>
